re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__or-2.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"a?|b|c+d\")"
snapshot_kind: text
---
Ok(
    Or(
        ZeroOrOne(
            Literal(
                Char(
                    'a',
                ),
            ),
        ),
        Literal(
            Char(
                'b',
            ),
        ),
        And(
            OneOrMore(
                Literal(
                    Char(
                        'c',
                    ),
                ),
            ),
            Literal(
                Char(
                    'd',
                ),
            ),
        ),
    ),
)
