re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__parenthesis-2.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"(ab)|(cd)+\")"
snapshot_kind: text
---
Ok(
    Or(
        And(
            Literal(
                Char(
                    'a',
                ),
            ),
            Literal(
                Char(
                    'b',
                ),
            ),
        ),
        OneOrMore(
            And(
                Literal(
                    Char(
                        'c',
                    ),
                ),
                Literal(
                    Char(
                        'd',
                    ),
                ),
            ),
        ),
    ),
)
