re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__parenthesis-3.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"((a|b)c)*\")"
snapshot_kind: text
---
Ok(
    Many(
        And(
            Or(
                Literal(
                    Char(
                        'a',
                    ),
                ),
                Literal(
                    Char(
                        'b',
                    ),
                ),
            ),
            Literal(
                Char(
                    'c',
                ),
            ),
        ),
    ),
)
