re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__parenthesis-4.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"(ab|cd)*\")"
snapshot_kind: text
---
Ok(
    Many(
        Or(
            And(
                Literal(
                    Char(
                        'a',
                    ),
                ),
                Literal(
                    Char(
                        'b',
                    ),
                ),
            ),
            And(
                Literal(
                    Char(
                        'c',
                    ),
                ),
                Literal(
                    Char(
                        'd',
                    ),
                ),
            ),
        ),
    ),
)
