re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__variable-2.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"a{a}b{b}c\")"
snapshot_kind: text
---
Ok(
    And(
        Literal(
            Char(
                'a',
            ),
        ),
        Variable(
            "a",
        ),
        Literal(
            Char(
                'b',
            ),
        ),
        Variable(
            "b",
        ),
        Literal(
            Char(
                'c',
            ),
        ),
    ),
)
